src/objects/Save_As_Draft__c/Save_As_Draft__c.object-meta.xml
<CustomObject>
    <label>Save As Draft</label>
    <nameField>
        <displayFormat>D-{000000000}</displayFormat>
        <label>Save As Draft Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Save As Draft</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>