src/objects/Save_As_Draft__c/fields/Business_Approver1__c.field-meta.xml
<CustomField>
    <fullName>Business_Approver1__c</fullName>
    <label>Business Approver1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>