src/objects/Save_As_Draft__c/fields/Business_Approver1_Id__c.field-meta.xml
<CustomField>
    <fullName>Business_Approver1_Id__c</fullName>
    <label>Business Approver1 Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>