src/objects/Save_As_Draft__c/fields/Business_Approver2__c.field-meta.xml
<CustomField>
    <fullName>Business_Approver2__c</fullName>
    <label>Business Approver2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>