src/objects/Save_As_Draft__c/fields/Business_Approver3__c.field-meta.xml
<CustomField>
    <fullName>Business_Approver3__c</fullName>
    <label>Business Approver3</label>
    <length>80</length>
    <type>Text</type>
</CustomField>