src/objects/Save_As_Draft__c/fields/Contract_Approvers1__c.field-meta.xml
<CustomField>
    <fullName>Contract_Approvers1__c</fullName>
    <label>Contract Approvers1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>