src/objects/Save_As_Draft__c/fields/Contract_Approvers2__c.field-meta.xml
<CustomField>
    <fullName>Contract_Approvers2__c</fullName>
    <label>Contract Approvers2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>