src/objects/Save_As_Draft__c/fields/Contract_Approvers2_Id__c.field-meta.xml
<CustomField>
    <fullName>Contract_Approvers2_Id__c</fullName>
    <label>Contract Approvers2 Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>