src/objects/Save_As_Draft__c/fields/Contract_Approvers3__c.field-meta.xml
<CustomField>
    <fullName>Contract_Approvers3__c</fullName>
    <label>Contract Approvers3</label>
    <length>80</length>
    <type>Text</type>
</CustomField>