src/objects/Save_As_Draft__c/fields/Finance_Approver1__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approver1__c</fullName>
    <label>Finance Approver1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>