src/objects/Save_As_Draft__c/fields/Finance_Approver2__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approver2__c</fullName>
    <label>Finance Approver2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>