src/objects/Save_As_Draft__c/fields/Finance_Approver3__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approver3__c</fullName>
    <label>Finance Approver3</label>
    <length>80</length>
    <type>Text</type>
</CustomField>