src/objects/Save_As_Draft__c/fields/Finance_Approver3_Id__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approver3_Id__c</fullName>
    <label>Finance Approver3 Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>