src/objects/Save_As_Draft__c/fields/M_PM_Approver1__c.field-meta.xml
<CustomField>
    <fullName>M_PM_Approver1__c</fullName>
    <label>M&amp;PM Approver1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>