src/objects/Save_As_Draft__c/fields/M_PM_Approver2_Id__c.field-meta.xml
<CustomField>
    <fullName>M_PM_Approver2_Id__c</fullName>
    <label>M&amp;PM Approver2 Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>