src/objects/Save_As_Draft__c/fields/Notification1__c.field-meta.xml
<CustomField>
    <fullName>Notification1__c</fullName>
    <label>Notification1</label>
    <length>80</length>
    <type>Text</type>
</CustomField>