src/objects/Save_As_Draft__c/fields/Notification1_Id__c.field-meta.xml
<CustomField>
    <fullName>Notification1_Id__c</fullName>
    <label>Notification1 Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>