src/objects/Save_As_Draft__c/fields/Notification2__c.field-meta.xml
<CustomField>
    <fullName>Notification2__c</fullName>
    <label>Notification2</label>
    <length>80</length>
    <type>Text</type>
</CustomField>