src/objects/Save_As_Draft__c/fields/Notification2_Id__c.field-meta.xml
<CustomField>
    <fullName>Notification2_Id__c</fullName>
    <label>Notification2 Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>