src/objects/Save_As_Draft__c/fields/Notification3__c.field-meta.xml
<CustomField>
    <fullName>Notification3__c</fullName>
    <label>Notification3</label>
    <length>80</length>
    <type>Text</type>
</CustomField>