src/objects/Save_As_Draft__c/fields/Notification3_Id__c.field-meta.xml
<CustomField>
    <fullName>Notification3_Id__c</fullName>
    <label>Notification3 Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>