src/objects/Save_As_Draft__c/fields/Product_Approver2_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Approver2_Id__c</fullName>
    <label>Product Approver2 Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>