src/objects/Save_As_Draft__c/fields/Workflow_details__c.field-meta.xml
<CustomField>
    <fullName>Workflow_details__c</fullName>
    <label>eGreensheet</label>
    <referenceTo>Workflow_details__c</referenceTo>
    <relationshipLabel>Save As Draft</relationshipLabel>
    <relationshipName>Save_As_Draft</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>